--- a/META.yml
+++ b/META.yml
@@ -1,20 +1,24 @@
---- #YAML:1.0
-name:               Hook-LexWrap
-version:            0.22
-abstract:           Lexically scoped subroutine wrappers
+---
+abstract: 'Lexically scoped subroutine wrappers'
 author:
-    - Damian Conway (damian@conway.org)
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    perl:  5.006
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+  - 'Damian Conway (damian@conway.org)'
+build_requires:
+  Test::More: 0
+generated_by: 'Module::Build version 0.3614'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Hook-LexWrap
+provides:
+  Hook::LexWrap:
+    file: lib/Hook/LexWrap.pm
+    version: 0.24
+  Hook::LexWrap::Cleanup:
+    file: lib/Hook/LexWrap.pm
+requires:
+  perl: 5.006
+resources:
+  license: http://dev.perl.org/licenses/
+  repository: http://github.com/chorny/Hook-LexWrap
+version: 0.24
