--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,6 @@
-blib*
-Makefile
-Makefile.old
-Build
-Build.bat
-_build*
-pm_to_blib*
-*.tar.gz
-.lwpcookies
-cover_db
-pod2htm*.tmp
-META.yml
-MYMETA.yml
-
-Hook-LexWrap-*
+/.ackrc
+/.build/
+!/.gitignore
+/.latest
+/Hook-LexWrap-*/
+/Hook-LexWrap-*.tar.gz
