add contributor names to pod

--- a/dist.ini
+++ b/dist.ini
@@ -19,3 +19,5 @@ MetaNoIndex.directory = demo
 [OnlyCorePrereqs]
 check_dual_life_versions = 0
 skip = Module::Build::Tiny
+
+; authordep Pod::Weaver::Section::Contributors = 0.008
