my bundle now defaults to verifying 5.006 compatibility

--- a/dist.ini
+++ b/dist.ini
@@ -5,19 +5,18 @@ copyright_holder = Damian Conway
 copyright_year = 2001
 
 [@Author::ETHER]
-:version = 0.086
+:version = 0.087
 changes_version_columns = 8
+installer = MakeMaker       ; stay 5.6-friendly
 -remove = Test::PodSpelling ; temporary
 -remove = EOLTests          ; TODO?
 -remove = Test::EOL         ; TODO?
 -remove = Test::NoTabs      ; TODO?
 Authority.authority = cpan:DCONWAY
-Test::MinimumVersion.max_target_perl = 5.006
 Git::GatherDir.exclude_filename = is_prerequisite
 MetaNoIndex.directory = demo
 
 [OnlyCorePrereqs]
 check_dual_life_versions = 0
-skip = Module::Build::Tiny
 
 ; authordep Pod::Weaver::Section::Contributors = 0.008
